infra/kubernetes/cluster-01/apps/media/qbittorrent/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbit-deployment
  namespace: media
  labels:
    app: qbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbit
  template:
    metadata:
      labels:
        app: qbit
    spec:
      containers:
        - name: qbit
          image: ghcr.io/linuxserver/qbittorrent:latest
          ports:
            - name: udp
              containerPort: 6881
              protocol: UDP
            - name: web
              containerPort: 8080
          volumeMounts:
            - mountPath: /config
              name: qbit-config-storage
            - mountPath: /downloads
              name: downloads-nfs
      volumes:
        - name: qbit-config-storage
          persistentVolumeClaim:
            claimName: qbit-config-claim
        - name: downloads-nfs
          nfs:
            server: 10.2.1.2
            path: /mnt/pool_01/Downloads
