infra/kubernetes/cluster-01/apps/media/qbittorrent/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbit-svc
  namespace: media
spec:
  selector:
    app: qbit
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web
